# silver_spectacle

./: README.md  package_list.txt  pyproject.toml  todo.ignore.md
commands/: shell
main/: main.py  server.py  setup.py
main/silver_spectacle/: __init__.py  extension.py  image_converters.py  index.html  library.py  main.js  server.py  theme.css  toast.css  tools.js
main/silver_spectacle/core_extensions/: chart_js.py  markdown.py  multi_line.py  quick_image.py  quick_line.py  quick_scatter.py
neo/: main.js
neo/silver_spectacle/: card.py  runtime.py  runtime_setup.py  server.py  spectacle_helpers.py  todo.md
neo/silver_spectacle/cards/: quick_line.html  quick_line.py
neo/silver_spectacle/files/: card copy.html  card.html  style.css
neo/silver_spectacle/spectacles/: markdown.html  quick_line.py  quick_lines.py
settings/: project.config.sh
settings/during_start/: 00100#setup_zsh.sh
settings/extensions/python/commands/: setup_venv
settings/nix/: #initialize.sh  parse_dependencies.nix  shell.nix
settings/requirements/: nix.toml  shell.nix
settings/setup_automatically/: main.sh
settings/setup_automatically/steps/: 02200_setup_pythonpath.sh
settings/setup_automatically/steps old.dont-sync/: 00130#ensure_commands_folder.sh  00500_setup_ld_path.sh  01000_ssl_fix.sh  02100_check_pip_modules.sh  02400_python_ignores.sh  07200#connect_git.sh  07900#ensure_commands_command.sh  08100#ensure_all_commands_executable.sh  09000_run_project_commands.sh
settings/zsh.dont-sync/site-functions/: prompt_spaceship_setup
test/: quick_line.py  quick_line_2.py  test_image.py  test_markdown.py  test_multi_line.py
