[tool.poetry]
name = "silver_spectacle"
version = "0.1.0"
description = ""
authors = ["Jeff Hykin <jeff.hykin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
pip = "20.1.1"
aiohttp = "3.7.4"
python-socketio = "5.3.0"
requests = "^2.26.0"
twine = "3.4.1"
"keyrings.alt" = "4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
