[tool.poetry]
name = "silver_spectacle"
version = "0.2.1"
description = ""
authors = ["Jeff Hykin <jeff.hykin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
pip = "20.1.1"
aiohttp = "3.7.4"
python-socketio = "5.3.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
